--- a/index.html
+++ b/index.html
@@ -128,9 +128,9 @@ val event = command.into[CoffeeMade]
     <p>
       To include Chimney to your SBT project, add the following line
       to your <code>build.sbt</code>:</p>
-    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.1&quot;</code></pre>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.2&quot;</code></pre>
     <p>
-      Library is released for Scala 2.11.x, 2.12.x and 2.13.0-M5.
+      Library is released for Scala 2.11.x, 2.12.x and 2.13.x.
       If you want to use it with Scala.js(or Scala Native), you need to replace <code>%%</code> with <code>%%%</code>.
       Due to some <a href="https://issues.scala-lang.org/browse/SI-7046">compiler bugs</a>,
       it's recommended to use at least Scala 2.11.9 or 2.12.1.
