--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ val event = command.into[CoffeeMade]
     <p>
       To include Chimney to your SBT project, add the following line
       to your <code>build.sbt</code>:</p>
-    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.2&quot;</code></pre>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.3&quot;</code></pre>
     <p>
       Library is released for Scala 2.11.x, 2.12.x and 2.13.x.
       If you want to use it with Scala.js(or Scala Native), you need to replace <code>%%</code> with <code>%%%</code>.
@@ -579,10 +579,74 @@ bean.setFlag(obj.flag)
         <h3 id="Limitations" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Limitations" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Limitations</h3>
 
           <p>
-            Currently it's not possible to override or provide values for missing setters.</p></div>
+            Currently it's not possible to override or provide values for missing setters.
+</p>
+    <h1 id="Unsafeoption" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Unsafeoption" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Unsafe option</h1>
+
+      Chimney supports opt-in unsafe transformation from optional types into non-optional types.
+
+      <p>
+        This mode is enabled explicitly with <code>.enableUnsafeOption</code>.
+        Transforming <code>None</code> into a concrete value will lead to <code>NoSuchElementException</code> at runtime,
+        so use at your own risk.
+</p>
+      <h2 id="Mappingproto3types" style="display: block;" class=" scalatex-site-Styles-hoverContainer scalatex-site-Styles-headerTag"><a class=" scalatex-site-Styles-headerLink" href="#Mappingproto3types" style="position: absolute;right: 0px;"><i class="fa fa-link"></i></a>Mapping proto3 types</h2>
+        Unsafe option mode is typically useful when mapping proto3-generated classes to domain classes.
+        Scalapb indeed generates fields wrapped in <code>Option</code> types for messages. In certain scenarios,
+        it can be safe to assume that the value is always present, thus allowing for significant boilerplate reduction.
+
+      <p>
+        Here's an example protobuf definition:
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">syntax = &quot;proto3&quot;;
+package pb;
+message Item {
+    int32 id = 1;
+    string name = 2;
+}
+message OrderLine {
+    Item item = 1;
+    int32 quantity = 2;
+}
+message Address {
+    string street = 1;
+    int32 zip_code = 2;
+    string city = 3;
+}
+message Customer {
+    int32 id = 1;
+    string first_name = 2;
+    string last_name = 3;
+    Address address = 4;
+}
+message Order {
+    repeated OrderLine lines = 1;
+    Customer customer = 2;
+}
+</code></pre>
+      <p>
+        And the equivalent domain model definitions:
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">package domain
+
+case class Item(id: Int, name: String)
+case class OrderLine(item: Item, quantity: Int)
+case class Address(street: String, zipCode: Int, city: String)
+case class Customer(id: Int, firstName: String, lastName: String, address: Address)
+case class Order(lines: List[OrderLine], customer: Customer)
+</code></pre>
+      <p>
+        Transforming from one representation to the other can be achieved directly using <code>.enableUnsafeOption</code>:
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">val domainOrder = pbOrder.into[domain.Order].enableUnsafeOption.transform
+</code></pre>
+      <p>
+        and vice-versa:
+</p>
+      <pre><code class="scala scalatex-site-Styles-highlightMe">val pbOrder = domainOrder.into[pb.Order].enableUnsafeOption.transform</code></pre></div>
 </div><script>
     scalatex.scrollspy.Controller().main(
-      [{"value":"Chimney","children":[{"value":"What Chimney does","children":[]},{"value":"Getting started","children":[{"value":"Trying with Ammonite REPL","children":[]}]},{"value":"Usage","children":[{"value":"Basic transformations","children":[]},{"value":"Nested transformations","children":[]},{"value":"Providing missing values","children":[]},{"value":"Default values","children":[{"value":"Disabling default values","children":[]}]},{"value":"Standard types","children":[]},{"value":"Value classes","children":[]},{"value":"Field re-labelling","children":[]},{"value":"Default option values","children":[]}]},{"value":"Advanced techniques","children":[{"value":"Custom transformations","children":[]},{"value":"Coproducts support","children":[]},{"value":"Patchers","children":[{"value":"Optional patch values","children":[]}]},{"value":"Java beans","children":[{"value":"Reading from Java beans","children":[]},{"value":"Writing to Java beans","children":[{"value":"Limitations","children":[]}]}]}]}]}]
+      [{"value":"Chimney","children":[{"value":"What Chimney does","children":[]},{"value":"Getting started","children":[{"value":"Trying with Ammonite REPL","children":[]}]},{"value":"Usage","children":[{"value":"Basic transformations","children":[]},{"value":"Nested transformations","children":[]},{"value":"Providing missing values","children":[]},{"value":"Default values","children":[{"value":"Disabling default values","children":[]}]},{"value":"Standard types","children":[]},{"value":"Value classes","children":[]},{"value":"Field re-labelling","children":[]},{"value":"Default option values","children":[]}]},{"value":"Advanced techniques","children":[{"value":"Custom transformations","children":[]},{"value":"Coproducts support","children":[]},{"value":"Patchers","children":[{"value":"Optional patch values","children":[]}]},{"value":"Java beans","children":[{"value":"Reading from Java beans","children":[]},{"value":"Writing to Java beans","children":[{"value":"Limitations","children":[]}]}]},{"value":"Unsafe option","children":[{"value":"Mapping proto3 types","children":[]}]}]}]}]
   )</script><script>
     ['DOMContentLoaded', 'load'].forEach(function(ev){
       addEventListener(ev, function(){
@@ -592,4 +656,4 @@ bean.setFlag(obj.flag)
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
