--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ val event = command.into[CoffeeMade]
     <p>
       To include Chimney to your SBT project, add the following line
       to your <code>build.sbt</code>:</p>
-    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.4&quot;</code></pre>
+    <pre><code class="scala scalatex-site-Styles-highlightMe">libraryDependencies += &quot;io.scalaland&quot; %% &quot;chimney&quot; % &quot;0.3.5&quot;</code></pre>
     <p>
       Library is released for Scala 2.11.x, 2.12.x and 2.13.x.
       If you want to use it with Scala.js(or Scala Native), you need to replace <code>%%</code> with <code>%%%</code>.
@@ -646,7 +646,133 @@ case class Order(lines: List[OrderLine], customer: Customer)
       <pre><code class="scala scalatex-site-Styles-highlightMe">val pbOrder = domainOrder.into[pb.Order].enableUnsafeOption.transform</code></pre></div>
 </div><script>
     scalatex.scrollspy.Controller().main(
-      [{"value":"Chimney","children":[{"value":"What Chimney does","children":[]},{"value":"Getting started","children":[{"value":"Trying with Ammonite REPL","children":[]}]},{"value":"Usage","children":[{"value":"Basic transformations","children":[]},{"value":"Nested transformations","children":[]},{"value":"Providing missing values","children":[]},{"value":"Default values","children":[{"value":"Disabling default values","children":[]}]},{"value":"Standard types","children":[]},{"value":"Value classes","children":[]},{"value":"Field re-labelling","children":[]},{"value":"Default option values","children":[]}]},{"value":"Advanced techniques","children":[{"value":"Custom transformations","children":[]},{"value":"Coproducts support","children":[]},{"value":"Patchers","children":[{"value":"Optional patch values","children":[]}]},{"value":"Java beans","children":[{"value":"Reading from Java beans","children":[]},{"value":"Writing to Java beans","children":[{"value":"Limitations","children":[]}]}]},{"value":"Unsafe option","children":[{"value":"Mapping proto3 types","children":[]}]}]}]}]
+      [
+  {
+    "value" : "Chimney",
+    "children" : [
+      {
+        "value" : "What Chimney does",
+        "children" : [
+        ]
+      },
+      {
+        "value" : "Getting started",
+        "children" : [
+          {
+            "value" : "Trying with Ammonite REPL",
+            "children" : [
+            ]
+          }
+        ]
+      },
+      {
+        "value" : "Usage",
+        "children" : [
+          {
+            "value" : "Basic transformations",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Nested transformations",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Providing missing values",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Default values",
+            "children" : [
+              {
+                "value" : "Disabling default values",
+                "children" : [
+                ]
+              }
+            ]
+          },
+          {
+            "value" : "Standard types",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Value classes",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Field re-labelling",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Default option values",
+            "children" : [
+            ]
+          }
+        ]
+      },
+      {
+        "value" : "Advanced techniques",
+        "children" : [
+          {
+            "value" : "Custom transformations",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Coproducts support",
+            "children" : [
+            ]
+          },
+          {
+            "value" : "Patchers",
+            "children" : [
+              {
+                "value" : "Optional patch values",
+                "children" : [
+                ]
+              }
+            ]
+          },
+          {
+            "value" : "Java beans",
+            "children" : [
+              {
+                "value" : "Reading from Java beans",
+                "children" : [
+                ]
+              },
+              {
+                "value" : "Writing to Java beans",
+                "children" : [
+                  {
+                    "value" : "Limitations",
+                    "children" : [
+                    ]
+                  }
+                ]
+              }
+            ]
+          },
+          {
+            "value" : "Unsafe option",
+            "children" : [
+              {
+                "value" : "Mapping proto3 types",
+                "children" : [
+                ]
+              }
+            ]
+          }
+        ]
+      }
+    ]
+  }
+]
   )</script><script>
     ['DOMContentLoaded', 'load'].forEach(function(ev){
       addEventListener(ev, function(){
@@ -656,4 +782,4 @@ case class Order(lines: List[OrderLine], customer: Customer)
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
