--- a/index.html
+++ b/index.html
@@ -646,133 +646,7 @@ case class Order(lines: List[OrderLine], customer: Customer)
       <pre><code class="scala scalatex-site-Styles-highlightMe">val pbOrder = domainOrder.into[pb.Order].enableUnsafeOption.transform</code></pre></div>
 </div><script>
     scalatex.scrollspy.Controller().main(
-      [
-  {
-    "value" : "Chimney",
-    "children" : [
-      {
-        "value" : "What Chimney does",
-        "children" : [
-        ]
-      },
-      {
-        "value" : "Getting started",
-        "children" : [
-          {
-            "value" : "Trying with Ammonite REPL",
-            "children" : [
-            ]
-          }
-        ]
-      },
-      {
-        "value" : "Usage",
-        "children" : [
-          {
-            "value" : "Basic transformations",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Nested transformations",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Providing missing values",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Default values",
-            "children" : [
-              {
-                "value" : "Disabling default values",
-                "children" : [
-                ]
-              }
-            ]
-          },
-          {
-            "value" : "Standard types",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Value classes",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Field re-labelling",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Default option values",
-            "children" : [
-            ]
-          }
-        ]
-      },
-      {
-        "value" : "Advanced techniques",
-        "children" : [
-          {
-            "value" : "Custom transformations",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Coproducts support",
-            "children" : [
-            ]
-          },
-          {
-            "value" : "Patchers",
-            "children" : [
-              {
-                "value" : "Optional patch values",
-                "children" : [
-                ]
-              }
-            ]
-          },
-          {
-            "value" : "Java beans",
-            "children" : [
-              {
-                "value" : "Reading from Java beans",
-                "children" : [
-                ]
-              },
-              {
-                "value" : "Writing to Java beans",
-                "children" : [
-                  {
-                    "value" : "Limitations",
-                    "children" : [
-                    ]
-                  }
-                ]
-              }
-            ]
-          },
-          {
-            "value" : "Unsafe option",
-            "children" : [
-              {
-                "value" : "Mapping proto3 types",
-                "children" : [
-                ]
-              }
-            ]
-          }
-        ]
-      }
-    ]
-  }
-]
+      [{"value":"Chimney","children":[{"value":"What Chimney does","children":[]},{"value":"Getting started","children":[{"value":"Trying with Ammonite REPL","children":[]}]},{"value":"Usage","children":[{"value":"Basic transformations","children":[]},{"value":"Nested transformations","children":[]},{"value":"Providing missing values","children":[]},{"value":"Default values","children":[{"value":"Disabling default values","children":[]}]},{"value":"Standard types","children":[]},{"value":"Value classes","children":[]},{"value":"Field re-labelling","children":[]},{"value":"Default option values","children":[]}]},{"value":"Advanced techniques","children":[{"value":"Custom transformations","children":[]},{"value":"Coproducts support","children":[]},{"value":"Patchers","children":[{"value":"Optional patch values","children":[]}]},{"value":"Java beans","children":[{"value":"Reading from Java beans","children":[]},{"value":"Writing to Java beans","children":[{"value":"Limitations","children":[]}]}]},{"value":"Unsafe option","children":[{"value":"Mapping proto3 types","children":[]}]}]}]}]
   )</script><script>
     ['DOMContentLoaded', 'load'].forEach(function(ev){
       addEventListener(ev, function(){
@@ -782,4 +656,4 @@ case class Order(lines: List[OrderLine], customer: Customer)
         );
       })
     })
-  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              
+  </script></body></html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
