--- a/404.html
+++ b/404.html
@@ -1,8 +1,11 @@
 <html>
 <head>
-
+<meta http-equiv="refresh" content="5; URL=https://chimney.readthedocs.io" />
+<script>
+  window.location.href = 'https://chimney.readthedocs.io/' + window.location.pathname.replace("/chimney", "") + window.location.hash;
+</script>
 </head>
 <body>
-  Page not found...
+  Visit <a href="https://chimney.readthedocs.io">https://chimney.readthedocs.io</a> to access Chimney's documentation.
 </body>
 </html>
